--- a/html/resume.html
+++ b/html/resume.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <p>Gavin Clark</p>
+        <ul>
+            <a href="index.html">Home</a>
+            <a href="html/aboutme.html">About Me</a>
+            <a href="html/portfolio/portfolio.html">Portfolio</a>
+            <a href="html/contact.html">Contact Me</a>
+            <a class="active" href="html/resume.html">Resume</a>
+        </ul>
+    </nav>
 </body>
 </html>
