resume + index + abt me + logo
fix navbars and logo white line around circle

--- a/html/portfolio/resume.html
+++ b/html/portfolio/resume.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Resume</title>
 </head>
+
 <body>
     <nav>
         <p>Gavin Clark</p>
         <ul>
-            <a class="active" href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="html/aboutme.html">About Me</a>
             <a href="html/portfolio/portfolio.html">Portfolio</a>
             <a href="html/contact.html">Contact Me</a>
-            <a href="html/resume.html">Resume</a>
+            <a class="active" href="/Gavin Clark Resume (Jan 2024).pdf" download>Download Resume</a>
         </ul>
     </nav>
+    <section class="content">
+        <object class="pdf" data="/Gavin Clark Resume (Jan 2024).pdf" width="1900" height="1000">
+    </section>
 </body>
+
 </html>
