fix logo + html

--- a/html/portfolio/portfolio.html
+++ b/html/portfolio/portfolio.html
@@ -9,11 +9,11 @@
     <nav>
         <p>Gavin Clark</p>
         <ul>
-            <a href="index.html">Home</a>
-            <a href="html/aboutme.html">About Me</a>
-            <a class="active" href="html/portfolio/portfolio.html">Portfolio</a>
-            <a href="html/contact.html">Contact Me</a>
-            <a href="html/resume.html">Resume</a>
+            <a href="/html/index.html">Home</a>
+            <a href="aboutme.html">About Me</a>
+            <a class="active" href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact Me</a>
+            <a href="resume.html">Resume</a>
         </ul>
     </nav>
 </body>
