--- a/html/portfolio/resume.html
+++ b/html/portfolio/resume.html
@@ -11,15 +11,15 @@
     <nav>
         <p>Gavin Clark</p>
         <ul>
-            <a href="index.html">Home</a>
-            <a href="html/aboutme.html">About Me</a>
-            <a href="html/portfolio/portfolio.html">Portfolio</a>
-            <a href="html/contact.html">Contact Me</a>
-            <a class="active" href="/Gavin Clark Resume (Jan 2024).pdf" download>Download Resume</a>
+            <a href="/html/index.html">Home</a>
+            <a href="/html/portfolio/aboutme.html">About Me</a>
+            <a href="/html/portfolio/portfolio.html">Portfolio</a>
+            <a href="/html/portfolio/contact.html">Contact Me</a>
+            <a class="active" href="/Gavin-Clark-Resume-Jan-2024.pdf" download>Download Resume</a>
         </ul>
     </nav>
     <section class="content">
-        <object class="pdf" data="/Gavin Clark Resume (Jan 2024).pdf" width="1900" height="1000">
+        <object class="pdf" data="/Gavin-Clark-Resume-Jan-2024.pdf" width="1000" height="1000">
     </section>
 </body>
 
