--- a/html/portfolio/writing.html
+++ b/html/portfolio/writing.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Writing</title>
 </head>
+
 <body>
     <nav>
         <p>Gavin Clark</p>
@@ -16,5 +18,17 @@
             <a href="html/resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="content">
+        <h2>Honors English 12 Essays</h2>
+        <section class="jurassicpark">
+            <h3>Chaos Theory in Michael Crichton’s <i>Jurassic Park</i></h3>
+            <object class="pdf" data="/JP-APA-Research-Essay.pdf" width="1000" height="1000"></object>
+        </section>
+        <section class="rp1">
+            <h3>Why the OASIS in Cline’s <i>Ready Player One should not become a reality</i></h3>
+            <object data="/Gavin-Clark-Ready-Player-One-Essay.pdf" width="1000" height="1000"></object>
+        </section>
+    </section>
 </body>
+
 </html>
