--- a/html/portfolio/aboutme.html
+++ b/html/portfolio/aboutme.html
@@ -12,10 +12,10 @@
         <p>Gavin<br>Clark</p>
         <ul>
             <a href="/html/index.html">Home</a>
-            <a class="active" href="html/aboutme.html">About Me</a>
+            <a class="active" href="aboutme.html">About Me</a>
             <a href="portfolio.html">Portfolio</a>
-            <a href="html/contact.html">Contact Me</a>
-            <a href="html/resume.html">Resume</a>
+            <a href="contact.html">Contact Me</a>
+            <a href="resume.html">Resume</a>
         </ul>
     </nav>
     <header>
