--- a/html/portfolio/aboutme.html
+++ b/html/portfolio/aboutme.html
@@ -52,7 +52,7 @@
                     </ul>
                     <li>Building Conputers</li>
                     <li>Rubik's Cube Speedsolving</li>
-                    <li>Light Gaming</li>
+                    <li>Gaming</li>
                 </ul>
             </section>
         </section>
