--- a/html/portfolio/aboutme.html
+++ b/html/portfolio/aboutme.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/aboutme.css">
     <title>About Me</title>
 </head>
 
