--- a/html/index.html
+++ b/html/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/css/font.css">
     <title>Home</title>
 </head>
 
 <body>
     <nav>
-        <p>Gavin Clark</p>
+        <h1>Gavin Clark</h1>
         <ul>
             <a class="active" href="index.html">Home</a>
             <a href="portfolio/aboutme.html">About Me</a>
@@ -26,6 +31,12 @@
             <p>Computer Science Major</p>
             <p>Photographer</p>
             <p>Musician</p>
+        </section>
+        <section class="images">
+            <img src="" alt=""> 
+            <img src="" alt="">
+            <img src="" alt="">
+            
         </section>
     </section>
 </body>
