--- a/html/portfolio/aboutme.html
+++ b/html/portfolio/aboutme.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav>
-        <p>Gavin<br>Clark</p>
+        <h1>Gavin Clark</h1>
         <ul>
             <a href="/html/index.html">Home</a>
             <a class="active" href="aboutme.html">About Me</a>
