--- a/html/portfolio/contact-ticket.html
+++ b/html/portfolio/contact-ticket.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/contact-ticket.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
-        <p>Gavin Clark</p>
+        <h1>Gavin Clark</h1>
         <ul>
             <a href="/html/index.html">Home</a>
             <a href="aboutme.html">About Me</a>
@@ -17,5 +18,11 @@
             <a href="resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="container">
+        <h1>Create a Ticket</h1>
+        <section class="input">
+            <div class="name"></div>
+        </section>
+    </section>
 </body>
 </html>
