--- a/html/portfolio/contact.html
+++ b/html/portfolio/contact.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/contact.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
-        <p>Gavin Clark</p>
+        <h1>Gavin Clark</h1>
         <ul>
             <a href="/html/index.html">Home</a>
             <a href="aboutme.html">About Me</a>
@@ -17,5 +18,18 @@
             <a href="resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="container">
+        <h1>Contact Me</h1>
+        <section class="links">
+            <ul>
+                <li>My email: gavinclarkastro@gmail.com</li>
+                <li>My Instagram: <a href="https://www.instagram.com/gavinclarkastro?igsh=MmVlMjlkMTBhMg==">@gavinclarkastro</a></li>
+                <li>My Github: <a href="https://github.com/gavinclark217">gavinclark217</a></li>
+            </ul>
+        </section>
+        <section class="button">
+            <a href="contact-ticket.html">Create a Ticket</a>
+        </section>
+    </section>
 </body>
 </html>
