--- a/html/portfolio/writing.html
+++ b/html/portfolio/writing.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/writing.css">
     <title>Writing</title>
 </head>
 
 <body>
     <nav>
-        <p>Gavin Clark</p>
+        <h1>Gavin Clark</h1>
         <ul>
             <a href="index.html">Home</a>
             <a href="html/aboutme.html">About Me</a>
