--- a/html/portfolio/portfolio.html
+++ b/html/portfolio/portfolio.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/portfolio.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
-        <p>Gavin Clark</p>
+        <h1>Gavin Clark</h1>
         <ul>
             <a href="/html/index.html">Home</a>
             <a href="aboutme.html">About Me</a>
