--- a/html/index.html
+++ b/html/index.html
@@ -33,9 +33,9 @@
             <p>Musician</p>
         </section>
         <section class="images">
-            <img src="" alt=""> 
-            <img src="" alt="">
-            <img src="" alt="">
+            <img class="codeimg" src="/codeimg.jpg" alt="Code"> 
+            <img class="spaceimg" src="/IMG_0898.JPG" alt="NGC-7000">
+            <img class="pianoimg" src="/pexels-20710970-18940655.jpg" alt="Piano music">
             
         </section>
     </section>
