--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <section class="content">
-        <h1>My name is Gavin Clark</h1>
+        <h1 class="header">My name is Gavin Clark</h1>
         <section class="traits">
             <p>Computer Science Major</p>
             <p>Photographer</p>
@@ -36,7 +36,6 @@
             <img class="codeimg" src="/codeimg.jpg" alt="Code"> 
             <img class="spaceimg" src="/IMG_0898.JPG" alt="NGC-7000">
             <img class="pianoimg" src="/pexels-20710970-18940655.jpg" alt="Piano music">
-            
         </section>
     </section>
 </body>
