--- a/html/portfolio/aboutme.html
+++ b/html/portfolio/aboutme.html
@@ -18,61 +18,98 @@
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
-            <a href="/html/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a class="active" href="aboutme.html">About Me</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact Me</a>
             <a href="resume.html">Resume</a>
         </ul>
     </nav>
-    <header>
-        <h1>About Me</h1>
-    </header>
     <section class="content">
-        <section class="achievements">
-            <h2>My Academic Achievements</h2>
-            <ul>
-                <li>Academic Decathlon 8th-10th place overall scholarship</li>
-                <li>Four AP Classes</li>
-                <ul>
-                    <li>AP Calculus AB</li>
-                    <li>AP Computer Science Principles</li>
-                    <li>AP United States Government and Politics</li>
-                    <li>AP Psychology</li>
-                </ul>
-                <li>Clovis High School "Outstanding Contribution to Choral Music"</li>
-                <li>CSF</li>
-            </ul>
-        </section>
-        <section class="hobbies">
-            <h2>My Hobbies</h2>
-            <p>I have many different hobbies and skills, including night-time photography (astrophotography), piano,
-                choral singing, computer technology, and speed-solving Rubik’s Cubes.</p>
-            <section class="hobby-list">
-                <ul>
-                    <li><a href="portfolio/personal/astro.html">Astrophotography</a></li>
-                    <li>Music</li>
+        <h1 class="header">About Me</h1>
+        <section class="container">
+            <section class="achievements">
+                <section class="achievementswords">
+                    <h2>My Academic Achievements</h2>
                     <ul>
-                        <li>Piano</li>
-                        <li>Choral</li>
+                        <li>Academic Decathlon 8th-10th place overall scholarship</li>
+                        <li>Four AP Classes</li>
+                        <ul>
+                            <li>AP Calculus AB</li>
+                            <li>AP Computer Science Principles</li>
+                            <li>AP United States Government and Politics</li>
+                            <li>AP Psychology</li>
+                        </ul>
+                        <li>Clovis High School "Outstanding Contribution to Choral Music"</li>
+                        <li>CSF</li>
                     </ul>
-                    <li>Building Conputers</li>
-                    <li>Rubik's Cube Speedsolving</li>
-                    <li>Gaming</li>
-                </ul>
+                </section>
+
+                <section class="image">
+                    <img src="/USAD_Logo.svg.png" alt="">
+                </section>
+            </section>
+
+            <section class="hobbies">
+                <section class="image">
+                    <img src="/IMG_3899.jpg" alt="">
+                </section>
+
+                <section class="hobbieswords">
+                    <h2>My Hobbies</h2>
+                    <p>I have many different hobbies and skills, including night-time photography (astrophotography),
+                        piano,
+                        choral singing, computer technology, and speed-solving Rubik’s Cubes.</p>
+                    <section class="hobby-list">
+                        <ul>
+                            <li><a href="portfolio/personal/astro.html">Astrophotography</a></li>
+                            <li>Music</li>
+                            <ul>
+                                <li>Piano</li>
+                                <li>Choral</li>
+                            </ul>
+                            <li>Building Conputers</li>
+                            <li>Rubik's Cube Speedsolving</li>
+                            <li>Gaming</li>
+                        </ul>
+                    </section>
+                </section>
+            </section>
+
+            <section class="post-secondary-plan">
+                <h2>My Plans After High School</h2>
+                <p>I plan to pursue a career in computer science/software engineering. I enrolled in the AP Computer
+                    Science
+                    Principles class at Clovis High in my junior year. Additionally, in my senior year, I also took the
+                    Web
+                    Application Development lab at the Center for Advanced Research and Technology (CART). These
+                    experiences
+                    provided me with a solid foundation and better prepared me for my studies in college.</p>
+                <p>My College Major: Computer Science</p>
             </section>
         </section>
-        <section class="post-secondary-plan">
-            <h2>My Plans After High School</h2>
-            <p>I plan to pursue a career in computer science/software engineering. I enrolled in the AP Computer Science
-                Principles class at Clovis High in my junior year. Additionally, in my senior year, I also took the Web
-                Application Development lab at the Center for Advanced Research and Technology (CART). These experiences
-                provided me with a solid foundation and better prepared me for my studies in college.</p>
-            <ul>
-                <li>My College Major: Computer Science</li>
-            </ul>
-        </section>
+
+
     </section>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 
 </html>
