--- a/html/portfolio/portfolio.html
+++ b/html/portfolio/portfolio.html
@@ -15,12 +15,66 @@
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
-            <a href="/html/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="aboutme.html">About Me</a>
             <a class="active" href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact Me</a>
             <a href="resume.html">Resume</a>
         </ul>
     </nav>
+    <section class="content">
+        <h1 class="header">Portfolio</h1>
+        <section class="container">
+            <section class="toprow">
+                <section class="web">
+                    <h3>Web Development Projects</h3>
+                    <a href="web.html">
+                        <img src="/codeportfolioimg.png" alt="" style="width: 600px;">
+                    </a>
+                    
+                </section>
+                <section class="astro">
+                    <h3>Astrophotography</h3>
+                    <a href="personal/astro.html">
+                        <img src="/moon.jpg" alt="" style="width: 600px;">
+                    </a>
+                </section>
+            </section>
+            <section class="bottomrow">
+                <section class="writing">
+                    <h3>Writing</h3>
+                    <a href="writing.html">
+                        <img src="/pexels-picjumbo-com-55570-210661.jpg" alt="" style="width: 600px;">
+                    </a>
+                </section>
+                <section class="music">
+                    <h3>Music</h3>
+                    <a href="personal/choral.html">
+                        <img src="/choirportfolioimg.jpg" alt="" style="width: 600px;">
+                    </a>
+                    
+                </section>
+            </section>
+        </section>
+    </section>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 </html>
