--- a/html/portfolio/resume.html
+++ b/html/portfolio/resume.html
@@ -17,7 +17,7 @@
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
-            <a href="/html/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="/html/portfolio/aboutme.html">About Me</a>
             <a href="/html/portfolio/portfolio.html">Portfolio</a>
             <a href="/html/portfolio/contact.html">Contact Me</a>
@@ -25,8 +25,27 @@
         </ul>
     </nav>
     <section class="content">
-        <object class="pdf" data="/Gavin-Clark-Resume-Jan-2024.pdf" width="1000" height="1000">
+        <object class="pdf" data="/Gavin-Clark-Resume-Jan-2024.pdf">
     </section>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 
 </html>
