--- a/html/portfolio/web.html
+++ b/html/portfolio/web.html
@@ -15,12 +15,31 @@
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
-            <a href="/html/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="aboutme.html">About Me</a>
             <a class="active" href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact Me</a>
             <a href="resume.html">Resume</a>
         </ul>
     </nav>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 </html>
