--- a/html/portfolio/contact-ticket.html
+++ b/html/portfolio/contact-ticket.html
@@ -16,7 +16,7 @@
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
-            <a href="/html/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="aboutme.html">About Me</a>
             <a href="portfolio.html">Portfolio</a>
             <a class="active" href="contact.html">Contact Me</a>
@@ -29,5 +29,24 @@
             <div class="name"></div>
         </section>
     </section>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 </html>
