--- a/html/portfolio/contact.html
+++ b/html/portfolio/contact.html
@@ -16,7 +16,7 @@
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
-            <a href="/html/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="aboutme.html">About Me</a>
             <a href="portfolio.html">Portfolio</a>
             <a class="active" href="contact.html">Contact Me</a>
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <section class="container">
-        <h1>Contact Me</h1>
+        <h1 class="header">Contact Me</h1>
         <section class="links">
             <ul>
                 <li>My email: gavinclarkastro@gmail.com</li>
@@ -32,9 +32,28 @@
                 <li>My Github: <a href="https://github.com/gavinclark217">gavinclark217</a></li>
             </ul>
         </section>
-        <section class="button">
-            <a href="contact-ticket.html">Create a Ticket</a>
+        <section class="ticket">
+            <h2>Create a Contact Ticket</h2>
         </section>
     </section>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 </html>
