--- a/html/portfolio/personal/astro.html
+++ b/html/portfolio/personal/astro.html
@@ -3,18 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/gavinclark transparent copy1.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/css/font.css">
+    <link rel="stylesheet" href="/css/astro.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
-        <p>Gavin Clark</p>
+        <h1>Gavin Clark</h1>
         <ul>
-            <a href="index.html">Home</a>
-            <a href="html/aboutme.html">About Me</a>
-            <a class="active" href="html/portfolio/portfolio.html">Portfolio</a>
-            <a href="html/contact.html">Contact Me</a>
-            <a href="html/resume.html">Resume</a>
+            <a href="/index.html">Home</a>
+            <a href="/html/portfolio/aboutme.html">About Me</a>
+            <a class="active" href="/html/portfolio/portfolio.html">Portfolio</a>
+            <a href="/html/portfolio/contact.html">Contact Me</a>
+            <a href="/html/portfolio/resume.html">Resume</a>
         </ul>
     </nav>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 </html>
