--- a/html/portfolio/writing.html
+++ b/html/portfolio/writing.html
@@ -10,21 +10,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/font.css">    <title>Writing</title>
+    <link rel="stylesheet" href="/css/font.css">
+    <title>Writing</title>
 </head>
 
 <body>
     <nav>
         <h1>Gavin Clark</h1>
         <ul>
-            <a href="index.html">Home</a>
-            <a href="html/aboutme.html">About Me</a>
-            <a class="active" href="html/portfolio/portfolio.html">Portfolio</a>
-            <a href="html/contact.html">Contact Me</a>
-            <a href="html/resume.html">Resume</a>
+            <a href="/index.html">Home</a>
+            <a href="aboutme.html">About Me</a>
+            <a class="active" href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact Me</a>
+            <a href="resume.html">Resume</a>
         </ul>
     </nav>
     <section class="content">
+        <h1 class="header">Writing</h1>
         <h2>Honors English 12 Essays</h2>
         <section class="jurassicpark">
             <h3>Chaos Theory in Michael Crichton’s <i>Jurassic Park</i></h3>
@@ -35,6 +37,25 @@
             <object data="/Gavin-Clark-Ready-Player-One-Essay.pdf" width="1000" height="1000"></object>
         </section>
     </section>
+    <footer>
+        <section class="footer-links">
+            <a class="footer-contact" href="/html/portfolio/contact-ticket.html">
+                <img src="/mail-213.png" alt="Contact Ticket" style="width: 35px;">
+            </a>
+            <a class="footer-github" href="https://github.com/gavinclark217">
+                <img src="/githublogo.png" alt="Github" style="width: 35px;">
+            </a>
+            <a class="footer-insta" href="https://www.instagram.com/gavinclarkastro/">
+                <img src="/insta-logo.png" alt="Instagram" style="width: 35px;">
+            </a>
+            <a class="footer-li" href="https://www.linkedin.com/in/gavinclark217/">
+                <img src="/linkedinlogo.png" alt="LinkedIn" style="width: 35px;">
+            </a>
+        </section>
+        <section class="thanks">
+            <p>Thank you for visiting my website!</p>
+        </section>
+    </footer>
 </body>
 
 </html>
